optimized game and gallery components

--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -12,7 +12,7 @@
             <img src = "../../../assets/chev-right.svg" alt="help"/>
         </button></span>
     </div>
-    <app-gallery [currentChar]="currentChar" [gameProgress]="gameProgress" [imageIndex]="imageIndex"></app-gallery>
+    <app-gallery [currentChar]="currentChar"></app-gallery>
     
 
 
