--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -4,7 +4,7 @@
 </div>
 <div  class="imageButtons">
     <button 
-        (click)="changeImage(number)" 
+        (click)="changeImage(number-1)" 
         *ngFor="let number of [1, 2, 3, 4, 5, 6]" 
         [disabled]="gameProgress!.guesses+1 < number" 
         [class.disabled] = "gameProgress!.guesses+1 < number"
