--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,9 @@
     --blue3: #263968;
     --green: #1f5654;
     --green2: #256967;
+    --green3: #145638;
+    --green4: #1a7049;
+    --green5: #29b878;
     --red: #a12a32;
     --red2: #ac2e37;
     --white: #d5d6d6;
