--- a/src/app/components/guess/guess.component.html
+++ b/src/app/components/guess/guess.component.html
@@ -1,1 +1,19 @@
-<p>guess works!</p>
+<div class="guess">
+    <div [class.winNotif] = "gameProgress?.correct" [class.lossNotif] = "!gameProgress?.correct" *ngIf="gameProgress?.correct || gameProgress!.guesses > 5">
+        <h2>{{gameProgress?.correct ? "You Guessed It" : "Out of guesses"}}</h2>
+        <p>The character is: <span class="charName">{{currentChar?.name}}</span></p>
+        <p class="gameName">from {{currentChar?.game}}</p>
+    </div>
+    <form *ngIf="!gameProgress?.correct && gameProgress!.guesses <= 5" autocomplete="off" (submit)="submitGuess(); $event.preventDefault()">
+        <div class="autocomplete">
+            <input id="guessInput" type="text" (keyup)="onKey($event)" autocomplete="off" name="guessInput" placeholder="Search for a Character...">
+        </div>
+        <button id="submitBtn" type="submit" (click)="submitGuess(); $event.preventDefault()">Submit</button>
+    </form>
+    <div *ngIf="gameProgress" class="guessList">
+        <ul>
+            <li class="guessItem" [class.wrongAnswer] = "item != currentChar!.name" *ngFor="let item of gameProgress.history">{{item}}</li>
+        </ul>
+    </div>
+    
+</div>
