--- a/src/app/components/guess/guess.component.css
+++ b/src/app/components/guess/guess.component.css
@@ -17,21 +17,24 @@ h2{
 p{
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 2.5ch;
+    font-size: 2ch;
 }
 
 .charName {
+    font-size: 2.5ch;
     color: var(--green5);
     font-weight: 700;
+    
 }
 
 .gameName {
+    color: var(--grey);
     font-size: 1.5ch;
 }
 
 #guessInput{
     box-sizing: border-box;
-    margin-top: 4ch;
+    margin-top: 1ch;
     max-width: 600px;
     width: 100%;
     font-size: 2ch;
@@ -55,15 +58,37 @@ p{
     background-color: var(--green4);
 }
 
+ul{
+    max-width: 600px;
+    padding: 0;
+}
+
 .guessItem{
-    color:var(--green5);
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0.5ch;
+    margin-bottom: 1ch;
+    border: 3px var(--green5) solid;
+    border-radius: 8px;
+    list-style-type: none;
+    color:var(--white);
     text-align: left;
     font-size: 2ch;
     font-weight: 500;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .wrongAnswer{
-    color: var(--red2);
+    border-color: var(--red2);
+}
+
+.tryNotif{
+    font-size: 2ch;
+}
+
+.guess{
+    margin-top: 1ch;
 }
 
 textarea:focus, input:focus{
