--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -20,11 +20,13 @@ img{
 }
 
 .imageButtons button{
+    display: inline-block;
     font-size: 2ch;
     font-weight: bold;
     color: var(--white);
     padding: 1ch;
     border-radius: 5px;
+    font-weight: 500;
 }
 
 .imageButtons button:not(.disabled):hover{
@@ -33,8 +35,12 @@ img{
 
 .imageButtons .selected{
     color: var(--white2);
-    background-color: var(--green);
+    border-bottom: 3px solid var(--white2);
     cursor: default;
+}
+
+.selected{
+    background-color: var(--purple3);
 }
 
 .disabled{
@@ -43,7 +49,7 @@ img{
 }
 
 .disabled:hover{
-    background-color: var(--blue2);
+    background-color: var(--purple);
 }
 
 #skipButton {
@@ -66,6 +72,23 @@ img{
     border-radius: 8px 0px 0px 0px;
     backdrop-filter: contrast(5%);
 }
+
+.wrong{
+    background-color: var(--red);
+}
+
+.correct{
+    background-color: var(--green);
+}
+
+.selected .correct{
+    background-color: var(--red2);
+}
+
+.wrong .selected{
+    background-color: var(--green2);
+}
+
 
 
 
