basic template for past games created

--- a/src/app/components/past-games/past-games.component.html
+++ b/src/app/components/past-games/past-games.component.html
@@ -1,1 +1,7 @@
-<p>past-games works!</p>
+<div class="pastGames">
+    <ul>
+        <li *ngFor="let e of [].constructor(size); let i = index">
+            <app-list-item [gameProgress]="userData!.gameProgress[i]" [index]="i"></app-list-item>
+        </li>
+    </ul>
+</div>
