completed info modal, mocked stat modal

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,8 +2,11 @@
     <a routerLink=""><h1>{{icon}}GuessTheChar</h1></a>
     <div class="iconLinks">
         <button routerLink="/past-games"><img src = "../../../assets/past-games.svg" alt="past games"/></button>
-        <button (click)="showStats()"><img src = "../../../assets/stats.svg" alt="stats"/></button>
-        <button (click)="showHelp()"><img src = "../../../assets/help.svg" alt="help"/></button>
+        <button (click)="showStatsModal()"><img src = "../../../assets/stats.svg" alt="stats"/></button>
+        <button (click)="showInfoModal()"><img src = "../../../assets/help.svg" alt="info"/></button>
     </div>
-    
 </nav>
+<app-info [showInfo]="showInfo" (sendShowInfo)="updateShowInfo($event)"></app-info>
+<app-stats [showStats]="showStats" (sendShowStats)="updateShowStats($event)"></app-stats>
+
+
