--- a/src/app/components/past-games/past-games.component.html
+++ b/src/app/components/past-games/past-games.component.html
@@ -1,4 +1,5 @@
 <div class="pastGames">
+    <h2>Past Games</h2>
     <ul>
         <li *ngFor="let e of [].constructor(size); let i = index">
             <app-list-item [gameProgress]="userData!.gameProgress[i]" [index]="i"></app-list-item>
