--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -1,4 +1,6 @@
 img{
+    margin-left: auto;
+    margin-right: auto;
     max-width: 100%;
     border-radius: 8px;
 }
@@ -10,6 +12,11 @@ img{
     max-width: 600px;
     padding-top: 1ch;
     padding-bottom: 1ch;
+}
+
+.imageBox img{
+    width: 600px;
+    object-fit: cover;
 }
 
 .imageButtons{
@@ -71,7 +78,7 @@ img{
     margin-top: 0;
     padding: 0.5ch 1ch;
     border-radius: 8px 0px 0px 0px;
-    backdrop-filter: contrast(5%);
+    background-color: rgba(0,0,0,0.75);
 }
 
 .wrong{
